[package]
name = "rusty-barnacle"
version = "0.1.0"
authors = ["Jayx20 <Jayx20@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
rand = "0.7.3"
rand_chacha = "0.2.2"
ahash = "0.3.2"